0.1-8	2010-02-17

   o	use Rscript --vanilla when retrieving Rcpp flags to avoid 
   	user configuration to get in the way. (reported by Jan de Leuuw)

0.1-6	2010-02-13

   o	Fixed latex rendering (initial line of input and output) was
   	indented
   
0.1-5	2010-02-13

   o 	Fixed handling of prompts

   o	Added an example of how to debug a renderer. Suggestion by 
	Gabor Grothendieck)

   o 	'highlight' now tests that parser.output is of class 'parser' to prevent
	uses of the 'parse' function in place of 'parser'. Suggestion by
	Hadley Wickham

0.1-3	2009-11-22
   o 	all headers and footers now include line feeds
   
   o 	headers and footers can now be NULL (no content)

0.1-2	2009-11-20
   o	initial release
