@@ -1,3 +1,1 @@
-PKG_CPPFLAGS=$(shell $(R_HOME)/bin/Rscript --vanilla -e "Rcpp:::CxxFlags()" )
 PKG_LIBS = $(shell $(R_HOME)/bin/Rscript --vanilla -e "Rcpp:::LdFlags()" )
-
